tdf#117053 create database wizard: set a property when it is supported

not only when we let the *user* set it in the "Advanced Settings" dialog.

There are two notions:
1) Does the driver/datasource support a property
2) Do we show the user any UI in "Advanced Settings" to change that
   property.

Notion 2 is called a _Feature_, notion 1 a _property_.

Database creation was saving properties only in case 2; the right
test is obviously case 1.

Change-Id: Ie740c9eb6768ae5f412a49119201e9211a9cd07d